@@ -258,8 +258,8 @@ st_format_t st_formats[] = {
         st_alstartwrite, st_rawwrite, st_rawstopwrite, st_format_nothing_seek},
 #ifdef ALSA_PLAYER
     {alsanames, ST_FILE_STEREO,
-        st_alsastartread, st_rawread, st_rawstopread,
-        st_alsastartwrite, st_rawwrite, st_alsastopwrite,
+        st_alsastartread, st_alsaread, st_rawstopread,
+        st_alsastartwrite, st_alsawrite, st_alsastopwrite,
         st_format_nothing_seek},
 #endif
     {aunames, ST_FILE_STEREO | ST_FILE_SEEK,
